<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaskirat.alternate_parking.activity.ParkActivity">

    <Button
        android:id="@+id/btn_end_parking"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:textColor="@color/white"
        android:text="@string/end_parking"
        android:gravity="center"
        android:background="@drawable/btn_red_bg"
        android:textSize="@dimen/btn_text_size"
        android:layout_alignParentBottom="true" />

    <RelativeLayout
        android:id="@+id/rl_time_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:clickable="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_time_left_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/time_left"
            android:textSize="@dimen/btn_text_size" />

        <TextView
            android:id="@+id/tv_time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv_time_left_title"
            android:textColor="@color/red"
            android:textSize="@dimen/btn_text_size" />

    </RelativeLayout>

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_gray"
        android:layout_below="@+id/rl_time_left" />

    <RelativeLayout
        android:id="@+id/rl_check_available_parking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/available_parking_bg"
        android:layout_below="@+id/divider_1"
        android:clickable="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_check_parking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="@drawable/available_parking_text_color"
            android:text="@string/parking_available"
            android:textSize="@dimen/btn_text_size" />

        <ImageView
            android:id="@+id/iv_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_next_item"/>

    </RelativeLayout>

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_gray"
        android:layout_below="@+id/rl_check_available_parking" />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/divider_2"
        android:layout_above="@+id/btn_end_parking"
        class="com.google.android.gms.maps.MapFragment" />

    <ImageButton
        android:id="@+id/ib_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_check_available_parking"
        android:layout_alignParentRight="true"
        android:background="@color/transparent"
        android:padding="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_action_share"/>


</RelativeLayout>
